YelpCamp/v6/readme.md
# Refactor Mongoose Code
* Create a models directory
* Use modules.export
* Require everything correctly

#  Add Seeds file
* Add a seeds.js file
* Run the seeds file every time the server starts

# Make the comment model
* Make our errors go away
* Display comments on campground show page

# Comment New/Create
* Discuss nested routes
* Add the comment new and create routes
* Add the new comment form

# Auth Pt. 1 - Add User Model
* Install all the packages needed for auth
* Define user model

# Auth Pt. 2 - Register 
* Configure Passport
* Add register routes
* Add register template

# Auth Pt. 3 - Login
* Add login routes
* Add login template

# Auth Pt. 4 - Logout/Navbar
* Add logout routes
* Prevent user from adding a comment if not signed in
* Add links to navbar
* Show/hide auth links correctly

# Auth Pt. 5 - Show/Hide Links
* Show/hide auth links in navbar correctly

